# rvsim

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: workflow.yml
include/: encoding.hpp  exec_env.hpp  instruction.hpp  isa.hpp  isim.hpp  memory.hpp  register_file.hpp  registers.hpp  segment.hpp  sim.hpp
src/: main.cc  memory.cc  register_file.cc  segment.cc  sim.cc  test.cc
test/elf/: ecall_read.ans  ecall_read.elf  fact.elf_DISABLED  fact_nobss.elf_DISABLED  plus.ans  plus.elf
test/elf/src/: ecall_read.c  fact.s  fact_nobss.s  plus.s
test/insn/add/: 001.ans  001.bstate  002.ans  002.bstate  003.ans  003.bstate
test/insn/add/src/: 001.s  002.s  003.s
test/insn/and/: 001.ans  001.bstate
test/insn/and/src/: 001.s
test/insn/or/: 001.ans  001.bstate
test/insn/or/src/: 001.s
test/insn/sll/: 001.ans  001.bstate  002.ans  002.bstate
test/insn/sll/src/: 001.s  002.s
test/insn/slt/: 001.ans  001.bstate  002.ans  002.bstate
test/insn/slt/src/: 001.s  002.s
test/insn/sltu/: 001.ans  001.bstate  002.ans  002.bstate
test/insn/sltu/src/: 001.s  002.s
test/insn/sra/: 001.ans  001.bstate  002.ans  002.bstate  003.ans  003.bstate
test/insn/sra/src/: 001.s  002.s  003.s
test/insn/srl/: 001.bstate
test/insn/srl/src/: 001.s
test/insn/sub/: 001.ans  001.bstate  002.ans  002.bstate
test/insn/sub/src/: 001.s  002.s
test/insn/xor/: 001.ans  001.bstate
test/insn/xor/src/: 001.s
test/script/: README.md  fromobj.sh  mkelf.sh  testgen.sh
test/stress/: 001.bstate  BType_dirty.bstate  RIType_dirty.bstate  SType_dirty.bstate
test/stress/add_sub/: 001.bstate
